--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,6 +1,4 @@
 :root {
-	--background-color: #1d4d72;
-    --white-back: white;
 	color: white;
 }
 
@@ -12,7 +10,7 @@
 
 
 header p {
-	background-color: #1d4d72;
+	background-color: black;
     padding-top: 8px;
     padding-left: 8px;
 	padding-bottom: 16px;
@@ -39,7 +37,6 @@ img {
 	font-size: 1.5rem;
 	border: 0;
 	background: none;
-	color: white;
  	position: absolute;
 	right: 5px;
 	top: 5px;
@@ -47,6 +44,7 @@ img {
 
 #menu::before {
 	content: "☰";
+	color: white;
 }
 
 #menu.open::before {
@@ -57,8 +55,7 @@ nav {
 	display: flex;
 	flex-direction: column;
 	list-style: none;
-	background-color: #1d4d72;
-	color: white;
+	background-color: black;
 }
 
 nav a {
@@ -91,10 +88,9 @@ footer {
 	text-align: center;  
     height: 80px;
     padding-top: 16px;
-    background-color: #1d4d72;
-    color: white;
+    background-color: black;
 }
 
 footer p {
-    background-color: #1d4d72;
+    background-color: black;
 }
